...
    <string name="sleep_timer_3_tracks">3 tracks</string>
    <string name="sleep_timer_45_minutes">45 minutes</string>
    <string name="sleep_timer_5_tracks">5 tracks</string>
    <string name="sleep_timer_60_minutes">60 minutes</string>
    <string name="sleep_timer_cancel">Cancel timer</string>
    <string name="sleep_timer_current_track">Current track</string>
    <string name="sleep_timer_fade">10-second fade</string>
    <string name="sleep_timer_fade_format">%1$s: %2$s</string>
    <string name="sleep_timer_fade_off">off</string>
    <string name="sleep_timer_fade_on">on</string>
    <string name="sleep_timer_stop_after">Stop after</string>
    <string name="sleep_timer_stop_in">Stop in</string>
    <string name="sleep_timer_timed_summary_minutes">Stops in %1$d minutes; 10-second fade %2$s</string>
...
